[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pydantic>=2.13.4",
    "regex>=2026.4.4",
    "torch>=2.11.0",
    "transformers>=5.8.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.20.2",
]

[tool.uv.sources]
llm_sdk = { workspace = true }

[tool.uv.workspace]
members = [
  "llm_sdk"
]
