[project]
name = "call-me-maybe"
version = "0.1.0"
description = "An AI project that has for goal to find a function name and argmenta based of a prompt"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pydantic>=2.13.4",
    "regex>=2026.4.4",
    "rich>=15.0.0",
    "torch>=2.11.0",
    "transformers>=5.8.0",
    "types-regex>=2026.5.9.20260518",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.20.2",
]

[[tool.mypy.overrides]]
module = "llm_sdk.*"
ignore_errors = true
